--- a/LeNet5/pyproject.toml
+++ b/LeNet5/pyproject.toml
@@ -13,6 +13,8 @@ rich = "^13.3.2"
 torchvision = "^0.15.1"
 pip = "^23.0.1"
 matplotlib = "^3.7.1"
+torch-hd = "^5.1.0"
+torchmetrics = "^0.11.4"
 
 
 [build-system]
